test.y.output
Grammar

    0 $accept: aaaa $end

    1 aaaa: %empty
    2     | aaaa line

    3 line: '\n'
    4     | exp '\n'

    5 exp: NUM
    6    | exp '+' exp
    7    | exp '-' exp
    8    | exp '*' exp
    9    | exp '/' exp
   10    | exp '^' exp


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'*' (42) 8
'+' (43) 6
'-' (45) 7
'/' (47) 9
'^' (94) 10
error (256)
NUM (258) 5


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
aaaa (11)
    on left: 1 2, on right: 0 2
line (12)
    on left: 3 4, on right: 2
exp (13)
    on left: 5 6 7 8 9 10, on right: 4 6 7 8 9 10


State 0

    0 $accept: . aaaa $end

    $default  reduce using rule 1 (aaaa)

    aaaa  go to state 1


State 1

    0 $accept: aaaa . $end
    2 aaaa: aaaa . line

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    '\n'  shift, and go to state 4

    line  go to state 5
    exp   go to state 6


State 2

    0 $accept: aaaa $end .

    $default  accept


State 3

    5 exp: NUM .

    $default  reduce using rule 5 (exp)


State 4

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 5

    2 aaaa: aaaa line .

    $default  reduce using rule 2 (aaaa)


State 6

    4 line: exp . '\n'
    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   10    | exp . '^' exp

    '+'   shift, and go to state 7
    '-'   shift, and go to state 8
    '*'   shift, and go to state 9
    '/'   shift, and go to state 10
    '^'   shift, and go to state 11
    '\n'  shift, and go to state 12


State 7

    6 exp: exp '+' . exp

    NUM  shift, and go to state 3

    exp  go to state 13


State 8

    7 exp: exp '-' . exp

    NUM  shift, and go to state 3

    exp  go to state 14


State 9

    8 exp: exp '*' . exp

    NUM  shift, and go to state 3

    exp  go to state 15


State 10

    9 exp: exp '/' . exp

    NUM  shift, and go to state 3

    exp  go to state 16


State 11

   10 exp: exp '^' . exp

    NUM  shift, and go to state 3

    exp  go to state 17


State 12

    4 line: exp '\n' .

    $default  reduce using rule 4 (line)


State 13

    6 exp: exp . '+' exp
    6    | exp '+' exp .
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   10    | exp . '^' exp

    '*'  shift, and go to state 9
    '/'  shift, and go to state 10
    '^'  shift, and go to state 11

    $default  reduce using rule 6 (exp)


State 14

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    7    | exp '-' exp .
    8    | exp . '*' exp
    9    | exp . '/' exp
   10    | exp . '^' exp

    '*'  shift, and go to state 9
    '/'  shift, and go to state 10
    '^'  shift, and go to state 11

    $default  reduce using rule 7 (exp)


State 15

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    8    | exp '*' exp .
    9    | exp . '/' exp
   10    | exp . '^' exp

    '^'  shift, and go to state 11

    $default  reduce using rule 8 (exp)


State 16

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
    9    | exp '/' exp .
   10    | exp . '^' exp

    '^'  shift, and go to state 11

    $default  reduce using rule 9 (exp)


State 17

    6 exp: exp . '+' exp
    7    | exp . '-' exp
    8    | exp . '*' exp
    9    | exp . '/' exp
   10    | exp . '^' exp
   10    | exp '^' exp .

    '^'  shift, and go to state 11

    $default  reduce using rule 10 (exp)
